--- a/wilde.css
+++ b/wilde.css
@@ -6,11 +6,13 @@ color: black;
 }
 
 
-.stage-direction:hover{
+.stage-direction{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
     color:darkblue;
-    background-color: coral;
+}
+.stage-direction:hover{
+    background-color: firebrick;
 }
 .name{
     font-family: 'Times New Roman', Times, serif;
