--- a/wilde.css
+++ b/wilde.css
@@ -12,7 +12,7 @@ color: black;
     color:darkblue;
 }
 .stage-direction:hover{
-    background-color: firebrick;
+    background-color: grey;
 }
 .name{
     font-family: 'Times New Roman', Times, serif;
@@ -33,4 +33,29 @@ color: black;
 }
 .allonby{
     color:deeppink;
+}
+table,th,td{
+    border: 1px solid black;    
+}
+table{
+    margin: 20px;
+    overflow: auto;
+    width: 100%;
+   border-collapse: collapse; 
+   height: 70px;
+}
+
+th{
+    background-color: rgba(0, 0, 0, 0.822);
+    color: white;
+}
+th,td{
+    padding: 10px;
+    text-align: center;
+}
+tr:hover{
+background-color:rgb(163, 163, 162);
+}
+tr:nth-child(even){
+    background-color: rgba(128, 128, 128, 0.205) ;
 }
