--- a/wilde.css
+++ b/wilde.css
@@ -16,7 +16,7 @@ color: black;
 }
 .name{
     font-family: 'Times New Roman', Times, serif;
-    font-size: x-large;
+    font-size: 20px;
     color:darkcyan;
 }
 .illingworth{
