--- a/wilde.css
+++ b/wilde.css
@@ -19,6 +19,11 @@ color: black;
     font-size: 20px;
     color:darkcyan;
 }
+.name:hover{
+    color: darkgray;
+   box-shadow: 20px 20px 20px 10px gray;
+   border: 10px double rgba(0, 0, 0, 0.418);
+}
 .illingworth{
     color:coral;
 }
