--- a/wilde.css
+++ b/wilde.css
@@ -64,3 +64,24 @@ background-color:rgb(163, 163, 162);
 tr:nth-child(even){
     background-color: rgba(128, 128, 128, 0.205) ;
 }
+ul.navbar-horizontal {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+  ul.navbar-horizontal li {
+    float:left;/* line up horizontally */
+    color:#000;
+    background-color:blueviolet;
+  }
+  
+  ul.navbar-horizontal a {
+    display:block;
+    padding:8px
+  }
+  
+  /* on hover change the link color*/
+  ul.navbar-horizontal a:hover {  
+    background-color: #555;
+    color:white;
+  }
